Audio Sarsat et RTL_FM via web

--- a/scripts/configs/webroot/index.html
+++ b/scripts/configs/webroot/index.html
@@ -198,5 +198,8 @@ setInterval(checkOrientation, 2000);
   <canvas id="screen-canvas"></canvas>
   <!-- <button id="fullscreen-link" onclick="fft_fullscreen();">Open fullscreen</button> -->
   <button onclick="ImageDownload();">Download screenshot</button>
+  <div>
+  <object content="text/html; charset=UTF-8859-1" data="stream/stream.html"> </object>
+  </div>
 </body>
 </html>
